[gd_scene load_steps=7 format=3 uid="uid://yytfetroh3on"]

[ext_resource type="Texture2D" uid="uid://d0ypbu2tr0ni8" path="res://ui/bocetomenu.png" id="1_d0120"]
[ext_resource type="Script" path="res://scripts/PantallaInicio.gd" id="1_hffsb"]
[ext_resource type="AudioStream" uid="uid://cxq25h0kbevpp" path="res://sonidos/Musica y sonidos a utilizar/Night at the Beach.ogg" id="3_5blns"]

[sub_resource type="Animation" id="Animation_vyw2r"]
resource_name = "splash"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cambiar"
}]
}

[sub_resource type="Animation" id="Animation_mqyjm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8btjr"]
_data = {
"RESET": SubResource("Animation_mqyjm"),
"splash": SubResource("Animation_vyw2r")
}

[node name="menuFinal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hffsb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.67, 0.67)
texture = ExtResource("1_d0120")

[node name="inicio" type="Button" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 232.0
offset_right = 792.0
offset_bottom = 336.0
flat = true

[node name="opciones" type="Button" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 384.0
offset_right = 792.0
offset_bottom = 488.0
flat = true

[node name="salir" type="Button" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 528.0
offset_right = 792.0
offset_bottom = 632.0
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5blns")
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8btjr")
}

[connection signal="pressed" from="inicio" to="." method="_on_inicio_pressed"]
[connection signal="pressed" from="opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
