[gd_scene load_steps=4 format=3 uid="uid://dqreb62ncc810"]

[ext_resource type="Script" path="res://scripts/PantallaInicio.gd" id="1_gvw1p"]
[ext_resource type="Texture2D" uid="uid://3wqmh6smwmwi" path="res://ui/boton.png" id="2_wjfdb"]
[ext_resource type="AudioStream" uid="uid://cxq25h0kbevpp" path="res://sonidos/Musica y sonidos a utilizar/Night at the Beach.ogg" id="3_n3utk"]

[node name="PantallaInicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvw1p")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -399.0
offset_top = 96.0
offset_right = 403.0
offset_bottom = 209.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Guia impractica Cvar"

[node name="Iniciar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -40.0
offset_right = 464.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_font_sizes/font_size = 50
text = "Iniciar"
icon = ExtResource("2_wjfdb")
icon_alignment = 1

[node name="Salir" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -212.0
offset_right = 464.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.6, 0.6)
theme_override_font_sizes/font_size = 50
text = "Salir"
icon = ExtResource("2_wjfdb")
icon_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 33.0
offset_right = 148.0
offset_bottom = 87.0
text = "Crear Archivo
Dialogos"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 384.0
offset_right = 255.0
offset_bottom = 449.0
text = "Probar nivel 2"

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 454.0
offset_right = 255.0
offset_bottom = 528.0
text = "Probar nivel 3"

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 536.0
offset_right = 253.0
offset_bottom = 610.0
text = "Probar nivel 4"

[node name="Button6" type="Button" parent="."]
layout_mode = 0
offset_left = 1008.0
offset_top = 272.0
offset_right = 1204.0
offset_bottom = 346.0
text = "Probar nivel 5 (cronologico)"

[node name="Button9" type="Button" parent="."]
layout_mode = 0
offset_left = 1005.0
offset_top = 414.0
offset_right = 1225.0
offset_bottom = 488.0
text = "Probar nivel 6"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 1016.0
offset_top = 360.0
offset_right = 1056.0
offset_bottom = 392.0
text = "5b"

[node name="Button7" type="Button" parent="."]
layout_mode = 0
offset_left = 1064.0
offset_top = 360.0
offset_right = 1104.0
offset_bottom = 392.0
text = "5c"

[node name="Button8" type="Button" parent="."]
layout_mode = 0
offset_left = 1112.0
offset_top = 360.0
offset_right = 1152.0
offset_bottom = 392.0
text = "5d"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_n3utk")
autoplay = true

[connection signal="pressed" from="Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
